Fixed title visibility

--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ input
 .title {
   text-align: center;
   margin-top: 30px;
+  color: black;        
+  font-size: 40px;     
+  font-weight: bold;
 }
 
 .footer
